Bug 1223312 - Part 2: Disable Noise reduction same as ARM. r=jesup